--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "bootstrap": "^5.3.8",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-faq-accordion": "^1.6.2",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
