--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
